--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <body>
     <header class="header">
       <img src="./avatarKs.jpg" alt="avatarKs.jpg" class="header__avatar" />
-      <h1 class="header__title">Ксения Тер-Исаян</h1>
-      <h3 class="header__subtitle">Привет, меня зовут Ксюша, и я QA-инженер!</h3>
+      <h1 class="header__title">Ксюша Тер-Исаян</h1>
+      <h2 class="header_title">27 лет</h2>
+      <h4 class="header__title">Санкт-Петербург</h4>
+      <h3 class="header__subtitle">Привет, меня зовут Ксюша, и я QA-инженер и мама Артура!</h3>
     </header>
     <main>
       <section class="links">
